--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									die Spaß und Gewinnmöglichkeiten suchen.
 
 								</p>
-								<a href="https://gowinspiritcasinoreviews.org/58VL1s?approach=highflyercasinocanadacom"
+								<a href="https://go.winspiritcasinoreviews.org/58VL1s?approach=highflyercasinocanadacom"
 									class="btn btn-primary">
 									Play Now 🛩️</a>
 							</div>
