--- a/bonus-kod/index.html
+++ b/bonus-kod/index.html
@@ -100,7 +100,7 @@
 
 									</p>
 								</div>
-								<a href="https://gowinspiritcasinoreviews.org/58VL1s?approach=highflyercasinocanadacom"
+								<a href="https://go.winspiritcasinoreviews.org/58VL1s?approach=highflyercasinocanadacom"
 									class="btn btn-primary">
 									Play Now 🛩️</a>
 							</div>
