--- a/cookie/index.html
+++ b/cookie/index.html
@@ -84,8 +84,7 @@
       <div class="home-page-hero">
         <div class="container">
           <h1><strong>Cookie-Richtlinie für JetCasino Germany</strong></h1>
-          <p>Willkommen bei JetCasino Germany! Diese Cookie-Richtlinie erklärt, wie<a
-              href="https://jetcasino-germany.org">https://jetcasino-germany.org</a> (im Folgenden „die Website“, „wir“,
+          <p>Willkommen bei JetCasino Germany! Diese Cookie-Richtlinie erklärt, wie (im Folgenden „die Website“, „wir“,
             „uns“ oder „unser“) Cookies und ähnliche Technologien verwendet, um Informationen zu sammeln und zu
             speichern, wenn Sie unsere Website besuchen. Unser Ziel ist es, Ihnen ein sicheres, effizientes und
             personalisiertes Spielerlebnis im Bereich arena casino online und arena online casino zu bieten.</p>
